<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="80dp"
    android:gravity="center_vertical"
    android:background="#212121"
    >
    <LinearLayout android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_weight="1"
        android:layout_gravity="bottom"
        >
        <LinearLayout android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:gravity="center_vertical"
            android:layout_marginStart="25dp"
            >
            <ImageView
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:alpha="0.8"
                android:contentDescription="@string/logo"
                android:src="@drawable/tile_icon"
                android:layout_marginEnd="8dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textSize="15sp"
                android:textColor="#C8C7D3"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/left"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="@string/default_extend"
            android:textSize="25sp"
            android:textColor="#C8C7D3"
            />
    </LinearLayout>

    <Button
        android:id="@+id/extend"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:textSize="25sp"
        android:textColor="#fafafa"
        android:background="@drawable/noti_button"
        android:layout_marginEnd="10dp"
        />

    <Button
        android:id="@+id/extend_little"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:text="@string/default_extend"
        android:textSize="25sp"
        android:textColor="#fafafa"
        android:background="@drawable/noti_button"
        android:layout_marginEnd="10dp"
        />
</LinearLayout>